@@ -1,5 +1,7 @@
 === SVN
 
+* Fixed #rename_column in mysql adapter to support types like varchar(255) (#159).
+
 * Added support for order and limit in DELETE statement in MySQL adapter (#160).
 
 * Added checks to Dataset#multi_insert to prevent work if no values are given (#162).
